--- a/src/common/fields/inputs/Checkbox/Checkbox.module.scss
+++ b/src/common/fields/inputs/Checkbox/Checkbox.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/vars.scss';
+
 .customCheckbox {
   position: absolute;
   z-index: -1;
@@ -16,7 +18,7 @@
       margin-right: 5px;
       flex-shrink: 0;
       flex-grow: 0;
-      border: 2px solid rgba(245, 198, 120, .5);
+      border: 2px solid $primary7;
       border-radius: 5px;
       background-repeat: no-repeat;
       background-position: 50% 50%;
@@ -33,6 +35,6 @@
   }
 
   &:not(:checked) + label:hover::before {
-    border-color: rgba(245, 198, 120, 1);
+    border-color: $primary;
   }
 }
