--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,14 +1,13 @@
-@import '../../styles/vars.scss';
-
 .page {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--background-color);
 
   .container {
-    background-color: #fff;
-    box-shadow: 0 4px 50px 2px rgba(0, 0, 0, .15);
+    background-color: var(--background-color);
+    box-shadow: var(--shadow-container);
     border-radius: 20px;
     overflow: hidden  ;
     display: flex;
@@ -22,7 +21,8 @@
     padding: 96px 0 16px;
     text-align: center;
     color: #fff;
-    background: url(../../static/images/dogge_background.svg);
+    // background: url(../../static/images/dogge_background.svg);
+    background: var(--images-auth-header);
     background-size: cover;
     font-size: 40px;
     font-family: 'Baloo 2';
@@ -45,7 +45,7 @@
     margin-bottom: 15px;
     a {
       text-decoration: none;
-      color: $primary;
+      color: var(--color-accent7);
       font-size: 14px;
       font-weight: 600;
       cursor: pointer;
