--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import url(./normalize.scss);
 @import url(./fonts.scss);
+@import url(./vars.scss);
 
 body {
   font-family: 'Open Sans', sans-serif;
