--- a/src/common/buttons/Button/Button.module.scss
+++ b/src/common/buttons/Button/Button.module.scss
@@ -1,29 +1,31 @@
-@import '../../../styles/vars.scss';
-
 .button {
   width: 247px;
   height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f5c678;
+  background-color: var(--color-accent);
   border-radius: 5px;
   padding: 15.5px 102.5px;
   border: none;
   color: #fff;
   font-size: 14px;
   font-weight: 300;
-  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, .15);
+  box-shadow: var(--shadow-button);
   transition: all .3s linear;
   cursor: pointer;
 
   &:hover {
-    background-color: $primary;
-    box-shadow: 0 2px 10px 1px rgba(0, 0, 0, .15);
+    background-color: var(--color-accent);
+    box-shadow: var(--shadow-button-hover);
   }
 
   &:active {
     background-color: rgba(245, 198, 120, 0.7);
+  }
+
+  &:disabled {
+    background-color: var(--color-accent7);
   }
 }
 
