--- a/src/common/fields/inputs/Checkbox/Checkbox.module.scss
+++ b/src/common/fields/inputs/Checkbox/Checkbox.module.scss
@@ -1,5 +1,3 @@
-@import '../../../../styles/vars.scss';
-
 .customCheckbox {
   position: absolute;
   z-index: -1;
@@ -9,6 +7,7 @@
     align-items: center;
     user-select: none;
     font-size: 14px;
+    color: var(--color-text);
 
     &::before {
       content: '';
@@ -18,7 +17,7 @@
       margin-right: 5px;
       flex-shrink: 0;
       flex-grow: 0;
-      border: 2px solid $primary7;
+      border: 2px solid var(--color-accent7);
       border-radius: 5px;
       background-repeat: no-repeat;
       background-position: 50% 50%;
@@ -35,6 +34,6 @@
   }
 
   &:not(:checked) + label:hover::before {
-    border-color: $primary;
+    border-color: var(--color-accent);
   }
 }
