--- a/src/common/fields/inputs/inputs.module.scss
+++ b/src/common/fields/inputs/inputs.module.scss
@@ -1,8 +1,8 @@
 .input {
   border: none;
   outline: none;
-  caret-color: #000;
-  color: #000;
+  caret-color: var(--color-text);
+  color: var(--color-text);
   font-size: 20px 14px 9px;
   background-color: transparent;
 
@@ -13,16 +13,9 @@
   }
 }
 
-.input:focus {
-  .formLabel {
-    transform: translate(-10%, -90%);
-    font-size: 10px;
-  }
-}
-
 .container {
   position: relative;
-  background-color: rgba(237, 237, 237, .7);
+  background-color: var(--background-color-field);
   border-radius: 5px;
   transition: all .3s linear;
   padding: 15px;
@@ -39,6 +32,15 @@
 
   &:hover {
     background-color: #ededed;
+    background-color: var(--color-field-focused);
+  }
+
+  &[aria-disabled='true'] {
+    background-color: var(--color-field-focused);
+    cursor: default;
+    .formLabel {
+      cursor: default;
+    }
   }
 }
 
@@ -46,7 +48,7 @@
   position: absolute;
   left: 16px;
   top: 16px;
-  color: rgba(0, 0, 0, .5);
+  color: var(--color-placeholder);
   font-size: 14px;
   text-transform: capitalize;
   z-index: 1;
@@ -70,6 +72,6 @@
   font-weight: 300;
   font-size: 12px;
   line-height: 16px;
-  color: #db3939;
+  color: var(--color-text-validation);
   padding-left: 10px;
 }
